--- a/Front/src/components/thanks/thanks.css
+++ b/Front/src/components/thanks/thanks.css
@@ -14,7 +14,7 @@
     background-color:#1C9BD5 ;
 }
 
-img {
+.logoBlanco {
     width: 450px;
     height: 450px;
     margin-bottom: 1rem;
@@ -45,7 +45,7 @@ img {
 }
 
 @media only screen and (max-width: 768px) {
-    img {
+    logoBlanco {
         width: 100%;
         height: auto;
         margin-bottom: 2rem;
