--- a/Front/src/components/thanks/thanks.css
+++ b/Front/src/components/thanks/thanks.css
@@ -3,22 +3,32 @@
 
 *   {
     font-family: 'Poppins', sans-serif;
+   
 }
-
+body {
+    background-color: #1C9BD5;
+  }
+  
 .contenedor {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     background-color:#1C9BD5 ;
+    min-height: 100vh; 
+    max-height: 100%; 
 }
+    
 
 .logoBlanco {
-    width: 450px;
-    height: 450px;
-    margin-bottom: 1rem;
+    
+        width: auto;
+        height: 250px;
+        margin-bottom: 0.3rem;
+        margin-top: 7px;
 }
+    
+
 
 .bocadillo {
     background-color: #ffffff;
@@ -26,6 +36,7 @@
     padding: 10px;
     text-align: center;
     width: 400px;
+    height:50px;
     position: relative;
     color:#52575B;
 
@@ -44,23 +55,64 @@
     width: 0;
 }
 
-@media only screen and (max-width: 768px) {
-    logoBlanco {
-        width: 100%;
-        height: auto;
-        margin-bottom: 2rem;
-    }
+.bocadillo {
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    width: 400px;
+    position: relative;
+    color:#52575B;
+    margin-bottom: 20px; 
+}
 
-    .bocadillo {
-        width: 90%;
-        margin: 0 1rem;
-        padding: 0.5rem;
-    }
+#club-aventureros {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    color: #ffffff;
 }
 
 
-@media only screen and (max-width: 480px) {
-    .bocadillo {
+#boton-club-aventureros {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px; 
+    background-color: #6BC047;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px; 
+    width: 190px; 
+    text-decoration: none; 
+}
+
+/* Para pantallas pequeñas */
+@media (max-width: 767px) {
+    .contenedor {
+        padding: auto;
+    }
+    .logoBlanco {
+        height: auto;
         width: 100%;
+        max-width: 300px;
+        margin-bottom: 1rem;
+    }
+    .bocadillo {
+        min-width: 90%;
+        width: auto;
+        margin-bottom: 20px;
+    }
+    #club-aventureros {
+        font-size: 1.5rem;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+    #boton-club-aventureros {
+        font-size: 1rem;
+        padding: 8px 16px;
+        width: 100%;
+        max-width: 200px;
+        margin: 0 auto;
     }
 }
